# oxDNAcpp

./: .gitignore  .replit  README.md  a.out  output.par  output.top  output_m.txt  replica.par  replica.top  replica_forces.txt  replicator  replicator.cpp  replit.nix  test  test.cpp
.github/workflow/: cmake.yml
crystal/: LR_vector.h  Makefile  SP.h  crystal.cpp  def.cpp  job_bigpatch.e1798  output.top
example/crystal/: BIG.conf.mgl  clusters.txt  conversion.py  correctA.cpp  crystal.cpp  def.cpp  externalForces.txt  external_forces.txt  input_BIG  input_seed  job.err  job.sh  last_conf.BIG.dat.mgl  log.ign  out.txt  saveDat.js
example/crystal/125/: clusters.txt  input_BIG
example/crystal/127/: clusters.txt  input_BIG
example/crystal/135/: clusters.txt  input_BIG
example/crystal/140/: clusters.txt  forces.txt  input_BIG
example/crystal/150/: clusters.txt  input_BIG
example/crystal/4crystals/: forces.txt
example/crystal/4crystals/123/: clusters.txt  input_BIG  output.top
example/crystal/4crystals/124/: clusters.txt  input_BIG
example/crystal/4crystals/125/: clusters.txt  input_BIG
example/crystal/4crystals/126/: clusters.txt  input_BIG
example/crystal/4crystals/127/: clusters.txt  input_BIG  test.txt
example/crystal/4crystals/128/: clusters.txt  input_BIG
example/crystal/4crystals/129/: clusters.txt  input_BIG
example/crystal/4crystals/130/: clusters.txt  forces.txt  input_BIG
example/replicator/: replica_forces.txt  rmsd.txt
main/extras/: setup.sh
main/managerExample/: blue.js  clearUP.js  config.yaml  connectCrystals.js  display.js  plot.gnuplot  saveDat.js  status.yaml
main/managerExample/4flat/: .sat24.patches.txt.swp  forces4flat.txt  inputOld.txt
main/managerExample/4ring/: forces.txt  sat24.patches.txt  submit.sh  test.txt
main/managerExample/5triangle/: forces.txt  input  terminal.cpp  test.txt
main/managerExample/7flat/: forces.txt  input  test7crystalFlat.txt
main/managerExample/DNA/: output.oxview
main/managerExample/SeedingDNA/: README.md  clu.top
main/managerExample/blank/replica-1/T-0.124/: input
main/managerExample/blank/replica-1/T-0.127/: input
main/managerExample/blank/replica-2/T-0.122/: input
main/managerExample/blank/replica-2/T-0.126/: forces.txt  input
main/managerExample/blank/replica-2/T-0.128/: input
main/managerExample/blank/replica-3/T-0.129/: input
main/managerExample/blank/replica-4/T-0.123/: input
main/managerExample/blank/replica-4/T-0.125/: input
main/managerExample/extraLarge/: forces.txt
main/managerExample/inputs/: submit.sh
main/managerExample/large/: forces.txt  input
main/src/: Analysis.cpp  Analysis.h  AnalysisMulticore.cpp  AnalysisMulticore.h  Basic.cpp  Basic.h  CMakeLists.txt  DNAcpp.h  Forces.cpp  LR_vector.h  Makefile  README.md  SP.h  SimulationAnalysis.h  SimulationManager.cpp  SimulationManager.h  creator.cpp  crystal.cpp  def.cpp  main.h  terminal.cpp  terminal.op  test.cpp
main/src/.ipynb_checkpoints/: Basic-checkpoint.h  LR_vector-checkpoint.h  crystal-checkpoint.cpp  def-checkpoint.cpp
replicator/: external_forces.txt  test.top
